1Major Changes Done

--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,7 @@ npm-debug.log*
 .DS_Store
 Thumbs.db
 
-package-lock.json
-
-README.md
-
 
 public/firebase-config.js
 
+# Note: package-lock.json and README.md should be committed
